--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "formidable": "^2.0.1"
+    "dayjs": "^1.11.1",
+    "formidable": "^2.0.1",
+    "snow": "^1.3.1",
+    "zlib": "^1.0.5"
   }
 }
