--- a/23-app/package.json
+++ b/23-app/package.json
@@ -1,19 +1,16 @@
 {
-  "name": "specialist_js_level_5_nodejs",
+  "name": "23-app",
   "version": "1.0.0",
   "description": "",
-  "main": "01-start.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dayjs": "^1.11.1",
     "express": "^4.17.3",
-    "formidable": "^2.0.1",
-    "snow": "^1.3.1",
-    "zlib": "^1.0.5"
+    "pug": "^3.0.2",
+    "socket.io": "^4.4.1"
   }
 }
