--- a/24-app/package.json
+++ b/24-app/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
-    "nodemon": "^2.0.16"
+    "mongoose": "^6.3.1",
+    "nodemon": "^2.0.16",
+    "uuid": "^8.3.2"
   }
 }
